# wasm-test-2329

./: Cargo.toml  index.html  package-lock.json
src/: lib.rs
